# little-man-computer

./: .clang-format  .gitignore  CMakeLists.txt
examples/: countdown.lma  countdown_from_asm.lmp
src/: lex.c  lex.h  lmc.c  lmc.h  main.c  misc.c  misc.h  stringbuffer.c  stringbuffer.h
